Add Home Assistant webhook call on page load
Added a script to send a signal to Home Assistant upon page load.

--- a/index.html
+++ b/index.html
@@ -150,6 +150,17 @@
         <div class="footer">
             Potwierdzenie płatności zostało wysłane na Twój adres e-mail
         </div>
+        <script>
+
+        // Automatyczne wysłanie sygnału do Home Assistanta po załadowaniu strony
+
+        fetch('https://lfzrrlfxubqewu3iuahugqqtqgujyfem.ui.nabu.casa/api/webhook/domi_terminal_1', {
+
+            method: 'GET'
+
+        });
+
+    </script>
     </div>
 </body>
 </html>
