Update bank logo and heading in index.html

--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
 <body>
     <!-- Acceptance Screen (shown first) -->
     <div class="container acceptance-screen" id="acceptanceScreen">
-        <div class="bank-logo">PLATNOSCI BILK</div>
+        <div class="bank-logo">PŁATNOSCI BILK*</div>
         
-        <h1>Bardzo INTENSYWNE Lokowanie KAPITALU</h1>
+        <h4>*Bardzo INTENSYWNE Lokowanie KAPITALU</h4>
         
         <div class="payment-info">
             <p>Kwota do zapłaty:</p>
